mus: Swap WindowTreeHostMus AcceleratedWidgets on display root swap.

This uses the correct platform display for the swapped display roots.

Bug: 794612
Test: about:settings/display "Set primary" on 2nd display works with --mus
Change-Id: I9eac5ea0123061dd0147d7e329fec816e55d744e